fixtures/runtime/valid/runtime_types/param-int.php
<?php
function add_one(int $value): int {
    return $value + 1;
}

echo add_one(4), "\n";
