fixtures/runtime/invalid/runtime_types/param-int-fail.php
<?php
function add_one(int $value): int {
    return $value + 1;
}

add_one([]);
